--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -4,6 +4,7 @@ $wild-yellow: #fecc00;
 $wild-black: #000000 ;
 $wild-white: #fff;
 $wild-nav-white: #F3F3F3;
+$wild-nav-darkgrey: #222222;
 $wild-red: #FF0000;
 $wild-blue: #23CAFF;
 $wild-grey: #838f9b;
