-Added activity 3 submission limit per day -Fix view invite list UI

--- a/frontend/src/components/Sidebar/index.scss
+++ b/frontend/src/components/Sidebar/index.scss
@@ -6,6 +6,7 @@
   height: 100%;
   min-height: 100vh;
   background-color: variables.$wild-nav-white;
+  border-right: 1px solid #D3D3D3;
 }
 
 .nav-button {
