--- a/frontend/src/screens/invites/index.scss
+++ b/frontend/src/screens/invites/index.scss
@@ -11,7 +11,7 @@
     height: 235px;
     position: relative;
     padding: 25px;
-    //background: radial-gradient(178.94% 106.41% at 26.42% 106.41%, variables.$wild-yellow 0%, rgba(255, 255, 255, 0) 71.88%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #FFFFFF;
+    background: radial-gradient(178.94% 106.41% at 26.42% 106.41%, variables.$wild-yellow 0%, rgba(255, 255, 255, 0) 71.88%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #FFFFFF;
     box-shadow: 0px 155px 62px rgba(0, 0, 0, 0.01), 0px 87px 52px rgba(0, 0, 0, 0.05), 0px 39px 39px rgba(0, 0, 0, 0.09), 0px 10px 21px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
     border-radius: 23px;
     transition: all 0.8s cubic-bezier(0.15, 0.83, 0.66, 1);
@@ -25,17 +25,17 @@
     transform: scale(1.05);
   }
   
-  .container {
-    width: 250px;
-    height: 250px;
-    position: absolute;
-    right: -35px;
-    top: -50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: scale(0.7);
-  }
+  // .container {
+  //   width: 250px;
+  //   height: 250px;
+  //   position: absolute;
+  //   right: -35px;
+  //   top: -50px;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  //   transform: scale(0.7);
+  // }
   
   .card-header {
     display: flex;
