--- a/frontend/src/screens/signup/index.scss
+++ b/frontend/src/screens/signup/index.scss
@@ -27,7 +27,7 @@
 
 .login-form{
     width: 480px;
-    height: 580px;
+    height: 610px;
     display: flex;
     flex-direction: column;
     padding: 5vb;
@@ -69,6 +69,17 @@
     
     &:hover{
         background-color: variables.$shadow-wild-blue;
+        color: variables.$wild-black;
+    }
+}
+
+.btn-wild-tertiary{
+    background-color: variables.$wild-grey;
+    color: variables.$wild-white;
+    height: 54.54px;
+    
+    &:hover{
+        background-color: variables.$shadow-wild-grey;
         color: variables.$wild-black;
     }
 }
